--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,105 +1,113 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/main"
     android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:fillViewport="true"
-    android:layout_height="match_parent">
+    android:background="@drawable/background_image">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/white"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:gravity="center"
+        android:padding="16dp">
 
-        <ImageView
-            android:layout_width="120dp"
-            android:layout_height="120dp"
-            android:src="@drawable/usp"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="40dp">
-
-        </ImageView>
-
-        <TextView
+        <!-- Card Container -->
+        <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="USER ONLINE SERVICES"
-            android:textColor="@color/black"
-            android:textAlignment="center"
-            android:textSize="20sp"
-            android:layout_marginTop="10dp">
+            android:layout_margin="16dp"
+            app:cardCornerRadius="16dp"
+            app:cardElevation="8dp"
+            android:background="@color/white">
 
-        </TextView>
-
-        <ProgressBar
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginTop="10dp"
-            android:id="@+id/progress_bar"
-            android:visibility="gone">
-
-        </ProgressBar>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
-            android:layout_marginTop="20dp">
-            <EditText
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Enter Username"
-                android:background="@drawable/input_field"
-                android:singleLine="true"
-                android:inputType="text"
-                android:id="@+id/username_et">
+                android:orientation="vertical"
+                android:padding="24dp">
 
-            </EditText>
-            <EditText
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="Enter Password"
-                android:background="@drawable/input_field"
-                android:layout_marginTop="10dp"
-                android:singleLine="true"
-                android:id="@+id/password_et">
+                <!-- Logo -->
+                <ImageView
+                    android:layout_width="120dp"
+                    android:layout_height="120dp"
+                    android:src="@drawable/usp"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginBottom="16dp" />
 
-            </EditText>
-            <Button
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Login"
-                android:textAllCaps="false"
-                android:textSize="18sp"
-                android:layout_marginTop="20dp"
-                android:id="@+id/loginBtn">
+                <!-- Title -->
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="USER ONLINE SERVICES"
+                    android:textColor="@color/blue"
+                    android:textAlignment="center"
+                    android:textSize="20sp"
+                    android:fontFamily="sans-serif-medium"
+                    android:layout_marginBottom="16dp" />
 
-            </Button>
+                <!-- Input Fields -->
+                <EditText
+                    android:id="@+id/username_et"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="Enter Username"
+                    android:background="@drawable/input_field"
+                    android:padding="12dp"
+                    android:layout_marginBottom="16dp"
+                    android:inputType="text"
+                    android:fontFamily="sans-serif" />
 
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:background="@color/grey"
-                android:layout_margin="50dp">
+                <EditText
+                    android:id="@+id/password_et"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="Enter Password"
+                    android:background="@drawable/input_field"
+                    android:padding="12dp"
+                    android:layout_marginBottom="24dp"
+                    android:inputType="textPassword"
+                    android:fontFamily="sans-serif" />
 
-            </View>
+                <!-- Login Button -->
+                <Button
+                    android:id="@+id/loginBtn"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Login"
+                    android:textAllCaps="false"
+                    android:textSize="18sp"
+                    android:background="@drawable/btn_bg"
+                    android:textColor="@color/white"
+                    android:fontFamily="sans-serif-medium"
+                    android:layout_marginBottom="16dp" />
 
-            <Button
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Forgot Password"
-                android:textAllCaps="false"
-                android:textSize="18sp"
-                android:background="@drawable/btn_bg"
-                android:textColor="@color/white"
-                android:id="@+id/forgotPasswordBtn">
+                <!-- Forgot Password Button -->
+                <Button
+                    android:id="@+id/forgotPasswordBtn"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Forgot Password"
+                    android:textAllCaps="false"
+                    android:textSize="16sp"
+                    android:background="@drawable/btn_bg_secondary"
+                    android:textColor="@color/white"
+                    android:fontFamily="sans-serif-medium"
+                    android:layout_marginBottom="16dp" />
 
-            </Button>
+                <!-- Progress Bar -->
+                <ProgressBar
+                    android:id="@+id/progress_bar"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:visibility="gone" />
 
-        </LinearLayout>
+            </LinearLayout>
+
+        </androidx.cardview.widget.CardView>
 
     </LinearLayout>
 
