--- a/app/src/main/res/layout/activity_manager_dashboard_acitivity.xml
+++ b/app/src/main/res/layout/activity_manager_dashboard_acitivity.xml
@@ -2,35 +2,39 @@
 <androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/drawer_layout"
     android:fitsSystemWindows="true"
     android:background="@color/white"
+    android:id="@+id/manager_drawer"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".student.StudentDashboardActivity">
+    tools:context=".manager.ManagerDashboardAcitivity">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <include layout="@layout/app_bar" />
+        <include layout="@layout/app_bar"/>
 
         <FrameLayout
-            android:id="@+id/content"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:id="@+id/manager_content">
 
         </FrameLayout>
     </LinearLayout>
+
 
     <com.google.android.material.navigation.NavigationView
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         app:itemTextColor="@color/black"
-        app:headerLayout="@layout/nav_header"
-        app:menu="@menu/nav_menu"
+        app:headerLayout="@layout/manager_header"
+        app:menu="@menu/manager_menu"
         android:layout_gravity="start"
-        android:id="@+id/navigationView"/>
+        android:id="@+id/managerNavView">
+
+    </com.google.android.material.navigation.NavigationView>
+
 
 </androidx.drawerlayout.widget.DrawerLayout>
