--- a/app/src/main/res/layout/fragment_finance_menu.xml
+++ b/app/src/main/res/layout/fragment_finance_menu.xml
@@ -1,14 +1,204 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".FinanceMenu">
+    tools:context=".student.finance.FinanceMenu"
+    android:background="@color/paleWhite">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+   <LinearLayout
+       android:layout_width="match_parent"
+       android:layout_height="wrap_content"
+       android:layout_margin="15dp"
+       android:orientation="vertical">
+       
+       <RelativeLayout
+           android:layout_width="match_parent"
+           android:layout_height="?actionBarSize">
+           
+           <TextView
+               android:layout_width="wrap_content"
+               android:layout_height="wrap_content"
+               android:text="My Finance Menu"
+               android:textSize="36sp"
+               android:textColor="@color/indigo"
+               android:padding="10dp"
+               android:textAllCaps="true"
+               android:fontFamily="@font/bebas"/>
+       </RelativeLayout>
 
-</FrameLayout>
+       <RelativeLayout
+           android:layout_width="match_parent"
+           android:layout_height="170dp">
+
+           <RelativeLayout
+               android:layout_width="match_parent"
+               android:layout_height="150dp"
+               android:background="@drawable/round_teal"
+               android:layout_margin="22dp">
+
+               <TextView
+                   android:layout_width="wrap_content"
+                   android:layout_height="wrap_content"
+                   android:text="invoices"
+                   android:textSize="30sp"
+                   android:fontFamily="@font/longreach"
+                   android:padding="20dp"/>
+               
+               <Button
+                   android:layout_width="wrap_content"
+                   android:layout_height="wrap_content"
+                   android:text="view invoices"
+                   android:textSize="12dp"
+                   android:padding="20dp"
+                   android:id="@+id/invoice_btn"
+                   android:layout_alignParentBottom="true"
+                   android:background="#00000000"/>
+
+
+           </RelativeLayout>
+
+           <ImageView
+               android:layout_width="150dp"
+               android:layout_height="110dp"
+               android:src="@drawable/invoice"
+               android:layout_marginTop="-5dp"
+               android:layout_alignParentRight="true"/>
+
+
+       </RelativeLayout>
+
+       <RelativeLayout
+           android:layout_width="match_parent"
+           android:layout_height="170dp">
+
+           <RelativeLayout
+               android:layout_width="match_parent"
+               android:layout_height="150dp"
+               android:background="@drawable/round_teal"
+               android:layout_margin="22dp">
+
+               <TextView
+                   android:layout_width="wrap_content"
+                   android:layout_height="wrap_content"
+                   android:text="payments"
+                   android:textSize="30sp"
+                   android:fontFamily="@font/longreach"
+                   android:padding="20dp"/>
+
+               <Button
+                   android:layout_width="wrap_content"
+                   android:layout_height="wrap_content"
+                   android:text="view payments"
+                   android:textSize="12dp"
+                   android:padding="20dp"
+                   android:id="@+id/payments_btn"
+                   android:layout_alignParentBottom="true"
+                   android:background="#00000000"/>
+
+
+           </RelativeLayout>
+
+           <ImageView
+               android:layout_width="150dp"
+               android:layout_height="120dp"
+               android:src="@drawable/payments"
+               android:layout_marginTop="3dp"
+               android:layout_alignParentRight="true"/>
+
+
+       </RelativeLayout>
+
+       <RelativeLayout
+           android:layout_width="match_parent"
+           android:layout_height="170dp">
+
+           <RelativeLayout
+               android:layout_width="match_parent"
+               android:layout_height="150dp"
+               android:background="@drawable/round_teal"
+               android:layout_margin="22dp">
+
+               <TextView
+                   android:layout_width="wrap_content"
+                   android:layout_height="wrap_content"
+                   android:text="holds"
+                   android:textSize="30sp"
+                   android:fontFamily="@font/longreach"
+                   android:padding="20dp"/>
+
+               <Button
+                   android:layout_width="wrap_content"
+                   android:layout_height="wrap_content"
+                   android:text="view holds"
+                   android:textSize="12dp"
+                   android:padding="20dp"
+                   android:id="@+id/holds_btn"
+                   android:layout_alignParentBottom="true"
+                   android:background="#00000000"/>
+
+
+           </RelativeLayout>
+
+           <ImageView
+               android:layout_width="150dp"
+               android:layout_height="100dp"
+               android:src="@drawable/holds"
+               android:layout_marginTop="0dp"
+               android:layout_alignParentRight="true"/>
+
+
+       </RelativeLayout>
+
+       <RelativeLayout
+           android:layout_width="match_parent"
+           android:layout_height="170dp">
+
+           <RelativeLayout
+               android:layout_width="match_parent"
+               android:layout_height="150dp"
+               android:background="@drawable/round_teal"
+               android:layout_margin="22dp">
+
+               <TextView
+                   android:layout_width="wrap_content"
+                   android:layout_height="wrap_content"
+                   android:text="sponsorship"
+                   android:textSize="30sp"
+                   android:fontFamily="@font/longreach"
+                   android:padding="20dp"/>
+
+               <Button
+                   android:layout_width="wrap_content"
+                   android:layout_height="wrap_content"
+                   android:text="view sponsorships"
+                   android:textSize="12dp"
+                   android:padding="20dp"
+                   android:id="@+id/sponsorship_btn"
+                   android:layout_alignParentBottom="true"
+                   android:background="#00000000"/>
+
+
+           </RelativeLayout>
+
+           <ImageView
+               android:layout_width="150dp"
+               android:layout_height="120dp"
+               android:src="@drawable/sponsorship"
+               android:layout_marginTop="0dp"
+               android:layout_alignParentRight="true"/>
+
+
+       </RelativeLayout>
+
+
+
+
+
+
+
+
+   </LinearLayout>
+
+
+</ScrollView>
