--- a/app/src/main/res/layout/fragment_payments.xml
+++ b/app/src/main/res/layout/fragment_payments.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".student.GradesFragment">
+    tools:context=".student.finance.PaymentsFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
