--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -29,7 +29,7 @@
             android:layout_margin="16dp"
             app:cardCornerRadius="16dp"
             app:cardElevation="8dp"
-            android:background="@color/white">
+            android:background="#56FFFFFF">
 
             <LinearLayout
                 android:layout_width="match_parent"
