--- a/app/src/main/res/layout/fragment_registration.xml
+++ b/app/src/main/res/layout/fragment_registration.xml
@@ -1,14 +1,13 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-<<<<<<< HEAD
     android:padding="16dp"
     android:fillViewport="true"
-    android:background="@color/white">
-=======
+    android:background="@color/white"
+    tools:ignore="ExtraText">
     tools:context=".student.RegistrationFragment">
->>>>>>> 18ad2b71bffcf67e5f3abe5609f4fd71c6160230
 
     <LinearLayout
         android:layout_width="match_parent"
