--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,10 +5,11 @@
     <color name="purple_700">#FF3700B3</color>
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
+    <color name="teal">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="grey">#D6DBDE</color>
-    <color name="gray">#AB9696</color>
+    <color name="gray">#3E3A3A</color>
     <color name="darkgrey">#D0D0D0</color>
     <color name="light_gray">#EFEFEF</color>
     <color name="blue">#0056b3</color>
