--- a/app/src/main/res/layout/fragment_grades.xml
+++ b/app/src/main/res/layout/fragment_grades.xml
@@ -50,6 +50,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Cumulative GPA:"
+                android:textColor="@color/black"
                 android:textSize="20sp"
                 android:fontFamily="@font/bebas"
                 android:layout_marginTop="10dp" />
