--- a/app/src/main/res/layout/fragment_courses.xml
+++ b/app/src/main/res/layout/fragment_courses.xml
@@ -34,6 +34,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="8dp"
                     android:text="Course Selection"
+                    android:textColor="@color/teal"
                     android:textSize="24sp"
                     android:fontFamily="@font/longreach"
                     android:padding="20dp"
@@ -71,6 +72,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="8dp"
                     android:text="Register for Courses"
+                    android:textColor="@color/teal"
                     android:textSize="24sp"
                     android:fontFamily="@font/longreach"
                     android:padding="20dp"
@@ -114,6 +116,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="Prerequisite Graph"
+                    android:textColor="@color/teal"
                     android:textSize="24sp"
                     android:fontFamily="@font/longreach"
                     android:padding="20dp"
