--- a/app/src/main/res/layout/fragment_registration.xml
+++ b/app/src/main/res/layout/fragment_registration.xml
@@ -37,6 +37,7 @@
                     android:text="DECLARATION"
                     android:textSize="24sp"
                     android:fontFamily="@font/longreach"
+                    android:textColor="@color/teal"
                     android:padding="20dp"
                     android:textStyle="bold"
                     android:layout_marginBottom="8dp" />
@@ -75,6 +76,7 @@
                     android:text="STUDENT PROFILE"
                     android:textSize="24sp"
                     android:fontFamily="@font/longreach"
+                    android:textColor="@color/teal"
                     android:padding="20dp"
                     android:textStyle="bold"
                     android:layout_marginBottom="8dp" />
@@ -198,6 +200,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="Active Registrations"
+                    android:textColor="@color/teal"
                     android:textSize="24sp"
                     android:fontFamily="@font/longreach"
                     android:padding="20dp"
@@ -242,6 +245,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="Dropped Registrations"
+                    android:textColor="@color/teal"
                     android:textSize="24sp"
                     android:fontFamily="@font/longreach"
                     android:padding="20dp"
