--- a/app/src/main/res/layout/activity_student_dashboard.xml
+++ b/app/src/main/res/layout/activity_student_dashboard.xml
@@ -27,9 +27,12 @@
     <com.google.android.material.navigation.NavigationView
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        app:itemTextColor="@color/black"
+        app:itemTextColor="@color/teal_700"
+        app:itemTextAppearance="@style/NavigationDrawerText"
         app:headerLayout="@layout/nav_header"
         app:menu="@menu/nav_menu"
+        app:itemIconTint="@color/teal_700"
+        app:itemIconSize="25dp"
         android:layout_gravity="start"
         android:id="@+id/navigationView"/>
 
